Bug 15400 - rpcserver no longer accepts double backslash in dfs pathname
Summary: rpcserver no longer accepts double backslash in dfs pathname
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.18.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-23 10:45 UTC by Pavel Filipenský
Modified: 2023-08-16 16:58 UTC (History)
2 users (show)

See Also:


Attachments
4.18 patch (6.83 KB, patch)
2023-07-11 13:48 UTC, Pavel Filipenský
jra: review+
Details
4.18 patch with cherry-pick tag (7.03 KB, patch)
2023-07-26 08:37 UTC, Pavel Filipenský
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Filipenský 2023-06-23 10:45:42 UTC
Double backslash in dfs pathname works with samba-4.17 but not with samba-4.18:

$ bin/rpcclient $SERVER_IP -U% -c 'dfsgetinfo \\\\localhost\\msdfs-share\\msdfs-src1 localhost msdfs-src1'
Comment 1 Samba QA Contact 2023-07-05 20:25:04 UTC
This bug was referenced in samba master:

2af9c65f2a17ace4e1021b5c8fd6df636c904cfe
6f073f258f1f4f03a8eb568ea05be78fdbec49eb
Comment 2 Pavel Filipenský 2023-07-11 13:48:27 UTC
Created attachment 17976 [details]
4.18 patch
Comment 3 Jeremy Allison 2023-07-25 19:51:00 UTC
Re-assigning to Jule for inclusion in 4.18.next.
Comment 4 Pavel Filipenský 2023-07-26 08:37:06 UTC
Created attachment 18002 [details]
4.18 patch with cherry-pick tag
Comment 5 Andreas Schneider 2023-07-26 08:39:30 UTC
Comment on attachment 18002 [details]
4.18 patch with cherry-pick tag

LGTM.
Comment 6 Jule Anger 2023-07-28 12:39:19 UTC
Pushed to autobuild-v4-18-test.
Comment 7 Samba QA Contact 2023-07-28 13:38:12 UTC
This bug was referenced in samba v4-18-test:

c052d8bdea879e20716704234a2049f8c2cfbff2
aa2af3c0c20daed2f7e69b70544dd1fef34de474
Comment 8 Jule Anger 2023-07-28 13:55:21 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-08-16 16:58:10 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.6):

c052d8bdea879e20716704234a2049f8c2cfbff2
aa2af3c0c20daed2f7e69b70544dd1fef34de474